--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ temp/
 //////////plugins/
 ////////plugins/android.json
 //////////plugins/ios.json
-////////www/
+www/
 $RECYCLE.BIN/
 
 .DS_Store
