--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "ionic-angular": "2.1.0",
     "ionic-native": "2.4.1",
     "ionicons": "3.0.0",
+    "lodash": "^4.17.4",
     "rxjs": "5.0.0-beta.12",
     "sw-toolbox": "3.4.0",
     "zone.js": "0.6.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.1.3",
-    "typescript": "2.0.9"
+    "typescript": "2.0.9",
+    "@types/lodash": "ts2.0"
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
