--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "ionic-app-scripts build",
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve",
-    "restore": "ionic state restore --plugins && ionic state restore --platform"
+    "restore": "ionic state restore --plugins && ionic state restore --platforms"
   },
   "dependencies": {
     "@angular/common": "2.2.1",
